<resources>
    <!-- Menu -->
    <string name="app_name">TimeTracker</string>
    <string name="project">Projecte</string>
    <string name="tasca">Tasca</string>
    <string name="report">Informe</string>
    <string name="informe_general">Informes generals</string>
    <string name="opcions">Opcions</string>
    <string name="informacio">Detalls</string>
    <string name="delete">Delete</string>

    <!-- Informació Activitat -->
    <string name="nom">Nom</string>
    <string name="descripcio">Descripció</string>
    <string name="interval">Interval</string>
    <string name="tempsTotal">Temps total</string>

    <!-- Nova Tasca -->
    <string name="desar">Desar</string>
    <string name="limited_time_text">Temps límit</string>
    <string name="add_schedule_text">Data programada</string>
    <string name="programada">Programar data d\'inici</string>
    <string name="temps_limit">Definir temps límit (en segons)</string>

    <!-- Nou Informe -->
    <string name="desde">Desde</string>
    <string name="fins">Fins</string>

    <!-- Missatge confirmació sortida -->
    <string name="missatgeConfirmacioBack">Hi ha tasques que s\'estan cronometrant.\nSi surts, es deixaran de contar.\nSegur que vols sortir?</string>
    <string name="aceptar">OK</string>
    <string name="cancelar">Cancelar</string>

    <!-- Editar -->
    <string name="editar">Editar</string>

    <!-- Menu Toolbar SortOptions -->
    <string name="sortMenuAlfabeticament">SortAlfabeticament</string>
    <string name="sortMenuRecents">SortRecents</string>
    <string name="sortMenuTasques">SortTasques</string>
    <string name="sortMenuProjectes">SortProjectes</string>

    <!-- Menu Toolbar AllRunning Buttons-->
    <string name="stop_all">Stop All Tasks</string>
    <string name="pause_all">Pause All Tasks</string>
    <string name="unpause_all">Unpause All Tasks</string>

</resources>
