<?xml version="1.0" encoding="utf-8"?>

<!-- Menú de la Toolbar per LlistaActivitatsActivity -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/fab_alfabeticament"
        android:title="@string/sortMenuAlfabeticament" />
    <item
        android:id="@+id/fab_recents"
        android:title="@string/sortMenuRecents"/>
    <item
        android:id="@+id/fab_tasques"
        android:title="@string/sortMenuTasques" />
    <item
        android:id="@+id/fab_projectes"
        android:title="@string/sortMenuProjectes" />

    <item
        android:id="@+id/boto_informes"
        android:icon="@drawable/ic_report_white"
        android:title="@string/report"
        app:titleTextColor="@color/colorSecondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/boto_detalls"
        android:icon="@drawable/ic_information"
        android:title="@string/informacio"
        app:titleTextColor="@color/colorSecondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/boto_delete"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="@string/delete"
        app:titleTextColor="@color/colorSecondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/boto_informes_arrel"
        android:title="@string/informe_general"
        app:titleTextColor="@color/colorText"
        app:showAsAction="never" />

    <item
        android:id="@+id/boto_opcions"
        android:title="@string/opcions"
        app:titleTextColor="@color/colorText"
        app:showAsAction="never" />

    <item
        android:id="@+id/boto_stop_all"
        android:title="@string/stop_all"
        app:titleTextColor="@color/colorText"
        app:showAsAction="never" />

    <item
        android:id="@+id/boto_pause_all"
        android:title="@string/pause_all"
        app:titleTextColor="@color/colorText"
        app:showAsAction="never" />

    <item
        android:id="@+id/boto_unpause_all"
        android:title="@string/unpause_all"
        app:titleTextColor="@color/colorText"
        app:showAsAction="never" />


</menu>
