<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_new_activity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nomWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nomTasca"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginStart="30dp"
                android:hint="@string/nom" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descripcioWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/descripcioTasca"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginStart="30dp"
                android:hint="@string/descripcio" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/scheduleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="35dp"
            android:text="@string/add_schedule_text" />

        <ImageButton
            android:id="@+id/scheduleButton"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            app:srcCompat="@android:drawable/ic_menu_today" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/scheduleButton"
            android:layout_alignStart="@+id/scheduleButton"
            android:layout_below="@+id/scheduleButton"
            android:layout_marginTop="21dp"
            android:background="@color/colorAccent"
            app:srcCompat="@drawable/ic_horglass_white" />

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/scheduleText"
            android:layout_alignTop="@+id/imageButton3"
            android:text="@string/limited_time_text" />

    </RelativeLayout>
</LinearLayout>