<?xml version="1.0" encoding="utf-8"?>
<!-- Detalls d'una activitat -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" >

        <include
            layout="@layout/toolbar"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/nom"
                android:textColor="@color/colorGrisFosc"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/descripcio"
                android:textColor="@color/colorGrisFosc"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_descripcio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:textColor="@color/colorText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/interval"
                android:textSize="15sp"
                android:textColor="@color/colorGrisFosc" />

            <TextView
                android:id="@+id/text_data_inici"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/text_data_final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/tempsTotal"
                android:textColor="@color/colorGrisFosc"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_temps_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/colorText" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>